# deer-flow

./: .dockerignore  .env.example  .env.test  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  AV-NOTES.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DOCKER_TEST_RESULTS.md  Dockerfile  Dockerfile.railway  ELECTRON_WRAPPER_SUMMARY.md  GIT_SYNC_WORKFLOW.md  Git Workflow Guide.md  Install.md  LICENSE  LOCAL_DEV_GUIDE.md  Makefile  PORT_CONFIGURATION_CHANGES.md  PROJECT_STATUS.md  Q&A.md  README.en.md  README.md  README.pt-BR.md  README_de.md  README_en.md  README_es.md  README_fr.md  README_it.md  README_ja.md  README_pt.md  README_ru.md  README_zh.md  SECURITY.md  SECURITY_REVIEW.md  STARTUP.md  UPDATE_NOTES.md  (+55 more)
backend/: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Dockerfile-backend  Dockerfile-langgraph  Dockerfile.langgraph  Dockerfile.prod  Makefile  README.md  atlas.hcl  debug.py  docker-compose.yml  docker-entrypoint.sh  faq_live_test_results.json  langgraph.json  manage_eviction.py  patch-skillstorage.diff  pyproject.toml  requirements-fastapi.txt  sitecustomize.py  test  test_faq_live.py  test_faq_raw.py  test_image_recognition_basic.py  test_memory_improvement.py  test_shared_data.py  uvicorn.bat  worker.py
backend/db/: schema.sql
backend/docs/: API.md  APPLE_CONTAINER.md  ARCHITECTURE.md  AUTH_DESIGN.md  AUTH_TEST_DOCKER_GAP.md  AUTH_TEST_PLAN.md  AUTH_UPGRADE.md  AUTO_TITLE_GENERATION.md  BENCHMARKS.md  BLOCKING_IO_DETECTION.md  CONFIGURATION.md  FILE_UPLOAD.md  GUARDRAILS.md  HARNESS_APP_SPLIT.md  IM_CHANNEL_CONNECTIONS.md  MCP_SERVER.md  MEMORY_COGNITIVE_STYLE.md  MEMORY_IMPROVEMENTS.md  MEMORY_IMPROVEMENTS_SUMMARY.md  MEMORY_SETTINGS_REVIEW.md  PATH_EXAMPLES.md  README.md  REPLAY_E2E.md  SANDBOX_MEMORY_PROFILING.md  SCIENTIFIC_COMPUTING.md  SETUP.md  SSO.md  STREAMING.md  Storage_Design.md  Storage_Design_ZH.md  TITLE_GENERATION_IMPLEMENTATION.md  TODO.md  TOOL_ARCHITECTURE.md  UPSTREAM_SANDBOX_REFACTOR.md  UPSTREAM_SUGGESTIONS_FEATURE.md  compaction.md  memory-settings-sample.json  middleware-execution-flow.md  plan_mode_usage.md  rfc-create-deerflow-agent.md  (+4 more)
backend/docs_zh/: API.zh-CN.md  APPLE_CONTAINER.zh-CN.md  ARCHITECTURE.zh-CN.md  AUTH_DESIGN.zh-CN.md  AUTH_TEST_DOCKER_GAP.zh-CN.md  AUTH_UPGRADE.zh-CN.md  CONFIGURATION.zh-CN.md  GUARDRAILS.zh-CN.md  MCP_SERVER.zh-CN.md  MEMORY_IMPROVEMENTS.zh-CN.md  MEMORY_IMPROVEMENTS_SUMMARY.zh-CN.md  MEMORY_SETTINGS_REVIEW.zh-CN.md  README.zh-CN.md  SETUP.zh-CN.md  TODO.zh-CN.md  memory-settings-sample.zh-CN.json  middleware-execution-flow.zh-CN.md  plan_mode_usage.zh-CN.md  rfc-extract-shared-modules.zh-CN.md  rfc-grep-glob-tools.zh-CN.md  summarization.zh-CN.md  task_tool_improvements.zh-CN.md
backend/scripts/: build_academic_offline_benchmark_suite.py  build_openreview_offline_benchmark.py  checkpoint_storage.py  dev-container-entrypoint.sh  e2e_safety_termination_demo.py  import_academic_eval_dataset.py  migrate_enterprise.py  migrate_skills_to_user_namespace.py  migrate_user_isolation.py  reproduce_default_user.py  run_academic_offline_regression.py  run_academic_online_regression.py  run_replay_gateway.py
backend/skills/: byted_cloud_base
backend/src/: client.py
backend/tests/: _blocking_io_detector.py  _router_auth_helpers.py  conftest.py  replay_provider.py  seed_runs_router.py  test_acp_config.py  test_additional_channel_connections.py  test_agent_identity.py  test_ai_graphs.py  test_aio_sandbox.py  test_aio_sandbox_auto_restart.py  test_aio_sandbox_local_backend.py  test_aio_sandbox_local_backend_network.py  test_aio_sandbox_provider.py  test_aio_sandbox_readiness.py  test_aio_sandbox_skills_mount.py  test_alere_tools.py  test_apify_tools.py  test_app_config_env_graceful.py  test_app_config_image_generator.py  test_app_config_reload.py  test_artifacts_router.py  test_arxiv_tools.py  test_assistant_payload_replay.py  test_attachments_resolver_middleware.py  test_auth.py  test_auth_config.py  test_auth_middleware.py  test_auth_middleware_provider_dispatch.py  test_auth_provider_request_hook.py  test_auth_type_system.py  test_auto_scientific_closure_middleware.py  test_autodrive_skills.py  test_bash_path_validation.py  test_benchmark_run_config.py  test_blocking_io_detector.py  test_brave_tools.py  test_browserless_client.py  test_budget_enforcement.py  test_byterover_context_middleware.py  (+430 more)
cli/: README_zh.md  cli.py  engine.py  pyproject.toml
cli/deerflow_cli/: cli.py  engine.py  session_store.py
cli/tests/: conftest.py  test_cli.py  test_engine.py  test_session_store.py
desktop/src-tauri/: Cargo.toml  tauri.conf.json
mcp_servers/clinicaltrials/: pyproject.toml
mcp_servers/fiscaldata/: api_client.py  pyproject.toml  server.py
mcp_servers/ncbi/: pyproject.toml
mcp_servers/worldbank/: pyproject.toml  server.py
tg-intel-crawler/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tg-intel-crawler/config/: config.example.yaml  keywords.yaml
tg-intel-crawler/tests/: test_bot_query_generator.py  test_bot_response_parser.py  test_bot_search.py  test_bot_search_throttle.py  test_candidate_pool.py  test_candidate_reviewer.py  test_detail_fetcher.py  test_exporter.py  test_group_extractor.py  test_intel_stats.py  test_join_throttle.py  test_joined_scanner.py  test_keyword_filter.py  test_llm_filter.py  test_main_llm_review.py  test_probe_classification.py  test_probe_reporter.py  (+7 more)
(+2437 files in other folders)
