[project]
name = "deerflow-cli"
version = "0.1.0"
description = "DeerFlow AI agent platform CLI"
requires-python = ">=3.12"
dependencies = [
    "deerflow-harness",
]

[project.scripts]
deerflow = "deerflow_cli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deerflow_cli"]

[tool.hatch.metadata]
allow-direct-references = true
