[project]
name = "clinicaltrials-mcp"
version = "0.1.0"
description = "MCP server for ClinicalTrials.gov API v2"
requires-python = ">=3.12"
dependencies = ["mcp>=1.0.0", "httpx>=0.28.0", "tenacity>=9.0.0"]

[project.scripts]
clinicaltrials-mcp = "clinicaltrials_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clinicaltrials_mcp"]
