[project]
name = "ncbi-mcp"
version = "0.1.0"
description = "MCP server for NCBI E-utilities API (PubMed, Gene, Protein, and more)"
requires-python = ">=3.12"
dependencies = ["mcp>=1.0.0", "httpx>=0.28.0", "tenacity>=9.0.0"]

[project.scripts]
ncbi-mcp = "ncbi_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ncbi_mcp"]
